zarf/deployments/devnet/participant3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec-party-manager-3
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-3
    app.kubernetes.io/component: peer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dec-party-manager
      app.kubernetes.io/instance: participant-3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dec-party-manager
        app.kubernetes.io/instance: participant-3
        app.kubernetes.io/component: peer
    spec:
      containers:
        - name: dec-party-manager
          image: public.ecr.aws/dlc-link/canton-decparty-manager:0.1.5
          imagePullPolicy: Always
          command: ["dec-party-manager", "serve"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: noise
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dec-party-manager-3-data
---
apiVersion: v1
kind: Service
metadata:
  name: dec-party-manager-3
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: noise
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dec-party-manager-3-ingress
  namespace: catalyst-canton
spec:
  ingressClassName: traefik
  rules:
    - host: dec-party-manager-3.dev.canton.ibtc.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dec-party-manager-3
                port:
                  number: 80
